Removed immutable list bug introduced by previous update.